--- a/app/index.html
+++ b/app/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>React CF</title>
+    <title> React CF </title>
   </head>
   <body>
     <div id="app"></div>
-    <script src="js/index.min.js"></script>
+    <script src="dist/js/index.min.js"></script>
   </body>
 </html>
